# demo

./: .gitignore  browser_automation.py  demo002.py  requirements.txt
.claude/: settings.local.json
demo/: 002.py  003.py  SubscriptionKey_ABCDEFGHIJ.p8  async.py  claude.py  iosjwt.py  main.py  model.pkl  talkOpenAi.py
demo001/: README.md  pyproject.toml
demo001/src/demo001/: __main__.py  bilibili_analyzer.py  config.py  server.py
merge_json/: keyboard.json  remove_duplicate_keybindings.py
sse/: .gitignore  README.md  build_executables.py  history.json  httpx_request.py  httpx_request_macos.spec  httpx_request_windows.spec  httpx_request_windows_amd64.spec  update_cookie.py
svg/: svg.py  svg2.py  svg3.py  svg4.py
voice/: test_clarw4ai.py  voice.py  voice2.py  voice3.py  voice4.py  voice5.py  voice6.py  voice7.py  voice8.py  voice9.py  voice_001.py
voice3/: audio_waveform_visualizer.py  test_callback.py  test_callback_direct.py
voice4/: analyze_target.py  audio_analyzer.py  audio_detector.py  audio_features.py  audio_test.py  audio_troubleshooting.md  config.py  debug_noise.py  detector_simple.py  detector_sounddevice.py  detector_system_audio.py  detector_with_waveform.py  final_test.py  main_detector.py  test_audio_buffer.py  test_detection.py
voice5/: README.md  config.py  create_test_audio.py  feature_fusion.py  panns_audio_detector.py  panns_features.py  panns_implementation.py  panns_tech_analysis.md  panns_validation_report.md  play_to_blackhole.py  sound_event_detection.py  utils.py
voiceCnn/: README.md  main.py  quick_start.py  voice6.txt  (+1 more)
(+13 files in other folders)
