[project]
name = "demo001"
version = "0.1.0"
description = "分析b站用户"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0"
]
[[project.authors]]
name = "le slack"
email = "lishanchuan@nineton.cn"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
demo001 = "demo001:main"
